Fix iframe size on firefox.

--- a/pagespeed/opt/mobilize/mobilize.css
+++ b/pagespeed/opt/mobilize/mobilize.css
@@ -63,6 +63,7 @@ body.mob-iframe {
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
+  flex: 1;
   width: 100%;
 }
 
